// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline IR golden files (change detection) > 3-node chain timeline matches golden snapshot 1`] = `
{
  "events": [
    {
      "endF": 12,
      "h": 50,
      "kind": "reveal",
      "label": "Node A",
      "startF": 0,
      "target": "A",
      "w": 100,
      "x": 0,
      "y": 0,
    },
    {
      "endF": 30,
      "h": 50,
      "kind": "reveal",
      "label": "Node B",
      "startF": 18,
      "target": "B",
      "w": 100,
      "x": 120,
      "y": 0,
    },
    {
      "endF": 42,
      "from": "A",
      "kind": "flow",
      "label": "flow",
      "startF": 30,
      "target": "A-B",
      "to": "B",
    },
    {
      "endF": 48,
      "h": 50,
      "kind": "reveal",
      "label": "Node C",
      "startF": 36,
      "target": "C",
      "w": 100,
      "x": 240,
      "y": 0,
    },
    {
      "endF": 60,
      "from": "B",
      "kind": "flow",
      "label": "flow",
      "startF": 48,
      "target": "B-C",
      "to": "C",
    },
    {
      "endF": 72,
      "kind": "highlight",
      "startF": 60,
      "target": "C",
    },
  ],
  "fps": 30,
  "height": 130,
  "offsetX": 40,
  "offsetY": 40,
  "totalFrames": 72,
  "width": 420,
}
`;

exports[`Timeline IR golden files (change detection) > cyclic graph timeline (visual-order fallback) matches golden snapshot 1`] = `
{
  "events": [
    {
      "endF": 12,
      "h": 60,
      "kind": "reveal",
      "label": "Node A",
      "startF": 0,
      "target": "A",
      "w": 60,
      "x": 0,
      "y": 0,
    },
    {
      "endF": 30,
      "h": 60,
      "kind": "reveal",
      "label": "Node B",
      "startF": 18,
      "target": "B",
      "w": 60,
      "x": 100,
      "y": 0,
    },
    {
      "endF": 42,
      "from": "A",
      "kind": "flow",
      "label": "next",
      "startF": 30,
      "target": "A-B",
      "to": "B",
    },
    {
      "endF": 48,
      "h": 60,
      "kind": "reveal",
      "label": "Node C",
      "startF": 36,
      "target": "C",
      "w": 60,
      "x": 50,
      "y": 100,
    },
    {
      "endF": 60,
      "from": "B",
      "kind": "flow",
      "label": "next",
      "startF": 48,
      "target": "B-C",
      "to": "C",
    },
    {
      "endF": 60,
      "from": "C",
      "kind": "flow",
      "label": "back",
      "startF": 48,
      "target": "C-A",
      "to": "A",
    },
    {
      "endF": 72,
      "kind": "highlight",
      "startF": 60,
      "target": "C",
    },
  ],
  "fps": 30,
  "height": 240,
  "offsetX": 40,
  "offsetY": 40,
  "totalFrames": 72,
  "width": 240,
}
`;

exports[`Timeline IR golden files (change detection) > diamond DAG timeline matches golden snapshot 1`] = `
{
  "events": [
    {
      "endF": 12,
      "h": 40,
      "kind": "reveal",
      "label": "Root",
      "startF": 0,
      "target": "A",
      "w": 80,
      "x": 100,
      "y": 0,
    },
    {
      "endF": 30,
      "h": 40,
      "kind": "reveal",
      "label": "Left",
      "startF": 18,
      "target": "B",
      "w": 80,
      "x": 0,
      "y": 100,
    },
    {
      "endF": 42,
      "from": "A",
      "kind": "flow",
      "label": "left",
      "startF": 30,
      "target": "A-B",
      "to": "B",
    },
    {
      "endF": 48,
      "h": 40,
      "kind": "reveal",
      "label": "Right",
      "startF": 36,
      "target": "C",
      "w": 80,
      "x": 200,
      "y": 100,
    },
    {
      "endF": 60,
      "from": "A",
      "kind": "flow",
      "label": "right",
      "startF": 48,
      "target": "A-C",
      "to": "C",
    },
    {
      "endF": 66,
      "h": 40,
      "kind": "reveal",
      "label": "Sink",
      "startF": 54,
      "target": "D",
      "w": 80,
      "x": 100,
      "y": 200,
    },
    {
      "endF": 78,
      "from": "B",
      "kind": "flow",
      "label": "join",
      "startF": 66,
      "target": "B-D",
      "to": "D",
    },
    {
      "endF": 78,
      "from": "C",
      "kind": "flow",
      "label": "join",
      "startF": 66,
      "target": "C-D",
      "to": "D",
    },
    {
      "endF": 90,
      "kind": "highlight",
      "startF": 78,
      "target": "D",
    },
  ],
  "fps": 30,
  "height": 320,
  "offsetX": 40,
  "offsetY": 40,
  "totalFrames": 90,
  "width": 360,
}
`;
